tests/errors/vector-generic-function-param-runtime-abi.ari
fn identity[T](value: T) -> T {
  return value;
}

fn main() -> i64 {
  let values: Vec[i64] = [1, 2, 3];
  let copied = identity(values);
  return len(copied);
}
